[package]
name = "dungeon_helper"
version = "0.1.0"
authors = ["James Hales <james@jameshales.org>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
r2d2 = "0.8"
r2d2_sqlite = "0.12.0"
rand = "0.7.2"
regex = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.7.2"
snips-nlu-lib = { git = "https://github.com/snipsco/snips-nlu-rs", tag = "0.65.3" }
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.67.1" }

[dependencies.rusqlite]
version = "0.20"
features = ["chrono"]
