[package]
name = "dungeon_helper"
version = "0.1.0"
authors = ["James Hales <james@jameshales.org>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
env_logger = "0.7.1"
failure = "0.1"
lazy_static = "1.4"
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.16"
rand = "0.7"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.8"
snips-nlu-lib = { git = "https://github.com/snipsco/snips-nlu-rs", tag = "0.65.3" }
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.67.1" }
symspell = "0.4"

[dependencies.rusqlite]
version = "0.23"
features = ["chrono"]

[dev-dependencies]
rand_pcg = "0.2"
